--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
@@ -7,15 +7,25 @@
         mc:Ignorable="d"
         x:Name="letterViewWindow"
         xmlns:Controls="clr-namespace:Registration.WPF.Views.Controls"
-        Title="FullContentLetterWindow" Height="600" Width="557" WindowStartupLocation="CenterScreen">
+        Title="FullContentLetterWindow" Height="600" Width="557" WindowStartupLocation="{StaticResource standartWindowStartupLocation}">
+    <Window.Resources>
+        <Style TargetType="Menu" BasedOn="{StaticResource standartMenu}"/>
+    </Window.Resources>
+
     <Grid>
-        <Menu Name="Menu" Height="20"  VerticalAlignment="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="19*"/>
+            <RowDefinition Height="550*"/>
+        </Grid.RowDefinitions>
+
+        <Menu Name="Menu" Grid.Row="0" Grid.RowSpan="2">
             <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetter}"  CommandParameter="{Binding ElementName=letterViewWindow}">
                 <MenuItem.Icon>
                     <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
                 </MenuItem.Icon>
             </MenuItem>
         </Menu>
-        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="545" Margin="10,25,0,-1" VerticalAlignment="Top" Width="529"/>
+
+        <StackPanel x:Name="stackPanel" Grid.Row="1" />
     </Grid>
 </Window>
