--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/RenameFolderWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/RenameFolderWindow.xaml
@@ -5,12 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="RenameFolderWindow" Height="120" Width="257" WindowStartupLocation="CenterScreen">
+        Title="RenameFolderWindow" Height="120" Width="257" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
+    <Window.Resources>
+        <Style TargetType="Label" BasedOn="{StaticResource standartLabel}"/>
+        <Style TargetType="TextBox" BasedOn="{StaticResource standartTextBox}">
+            <Setter Property="Width" Value="170"/>
+        </Style>
+        <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
+    </Window.Resources>
+
     <Grid>
-        <Label x:Name="labelName" Content="Name" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNewName" HorizontalAlignment="Left" Height="23" Margin="64,13,0,0" TextWrapping="Wrap" Text="{Binding Path=Name}" VerticalAlignment="Top" Width="170"/>
-        <Button x:Name="button" IsDefault="true" Content="Save" HorizontalAlignment="Left" Margin="75,44,0,0" VerticalAlignment="Top" Width="75" Click="SaveButton_Click" Command="{Binding Path=RenameFolder}"/>
-        <Button x:Name="button_Copy" IsCancel="true" Content="Cancel" HorizontalAlignment="Left" Margin="159,44,0,0" VerticalAlignment="Top" Width="75"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="6*"/>
+            <RowDefinition Height="7*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="48*"/>
+            <ColumnDefinition Width="203*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label x:Name="labelName" Content="Name" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Height="Auto" Margin="0,0,0,11" VerticalAlignment="Stretch"/>
+        <TextBox x:Name="txtNewName" TextWrapping="Wrap" Text="{Binding Path=Name}" Grid.Column="1" Grid.Row="0" Margin="3,3,0,0"  />
+
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+            <Button x:Name="button" IsDefault="true" Content="Save" Click="SaveButton_Click" Command="{Binding Path=RenameFolder}" />
+            <Button x:Name="button_Copy" IsCancel="true" Content="Cancel"/>
+        </StackPanel>
 
     </Grid>
 </Window>
