--- a/DocsVision_Test-master/Registration/Registration.WPF/ResourcesDictionary.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/ResourcesDictionary.xaml
@@ -27,7 +27,6 @@
         <Setter Property="TextBox.TextWrapping" Value="Wrap"/>
     </Style>
 
-
     <Style x:Key="standartListBox">
         <Setter Property="ListBox.HorizontalAlignment" Value="Left"/>
         <Setter Property="ListBox.HorizontalContentAlignment" Value="Stretch"/>
@@ -58,6 +57,11 @@
 
     <Style x:Key="standartControl">
         <Setter Property="UserControl.Margin" Value="0"/>
+    </Style>
+
+    <Style x:Key="standartMenu">
+        <Setter Property="ContextMenu.Height" Value="20"/>
+        <Setter Property="ContextMenu.VerticalAlignment" Value="Top"/>
     </Style>
     
 </ResourceDictionary>
