--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/AddWorkersFromAllWorkersListWindow.xaml
@@ -5,16 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="AddWorkersFromAllWorkersListWindow" Height="304.869" Width="540.846" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Grid Margin="0,0,-8,-2">
-        <ListBox x:Name="listOtherWorkers" HorizontalAlignment="Left" ItemsSource="{Binding Path=NonSelectedWorkers}" SelectedItem="{Binding Path=ReceiverForAdd}" Height="199" Margin="10,34,0,0" VerticalAlignment="Top" Width="225"/>
-        <ListBox x:Name="listReceivers" HorizontalAlignment="Left" ItemsSource="{Binding Path=SelectedWorkers}" SelectedItem="{Binding Path=ReceiverForDelete}" Height="199" Margin="281,34,0,0" VerticalAlignment="Top" Width="225"/>
-        <Label x:Name="labelOtherWorkers" Content="Other workers" HorizontalAlignment="Left" Margin="10,8,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="labelReceivers" Content="Receivers" HorizontalAlignment="Left" Margin="281,8,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnCancel" Content="Cancel" IsCancel="True" HorizontalAlignment="Left" Margin="431,238,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="btnCreate" Content="Create" IsDefault="True" HorizontalAlignment="Left" Margin="340,238,0,0" VerticalAlignment="Top" Width="75" Click="createButton_Click"/>
-        <Button x:Name="btnAdd" Content="→" HorizontalAlignment="Left" Margin="241,63,0,0" VerticalAlignment="Top" Width="33" Command="{Binding Path=AddReceivers}"/>
-        <Button x:Name="btnDelete" Content="←" HorizontalAlignment="Left" Margin="241,89,0,0" VerticalAlignment="Top" Width="33" Command="{Binding Path=DeleteReceivers}" RenderTransformOrigin="0.557,2.178"/>
+        Title="AddWorkersFromAllWorkersListWindow" Height="304.869" Width="540.846" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
+    <Window.Resources>
+        <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
+        <Style TargetType="Label" BasedOn="{StaticResource standartLabel}"/>
+        <Style TargetType="ListBox" BasedOn="{StaticResource standartListBox}">
+            <Setter Property="Height" Value="200"/>
+            <Setter Property="Width" Value="210"/>
+        </Style>
+    </Window.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="13*"/>
+            <RowDefinition Height="106*"/>
+            <RowDefinition Height="19*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="219*"/>
+            <ColumnDefinition Width="86*"/>
+            <ColumnDefinition Width="52*"/>
+            <ColumnDefinition Width="178*"/>
+        </Grid.ColumnDefinitions>
 
+        <StackPanel Grid.Column="0" Grid.Row="0" Grid.RowSpan="3">
+            <Label x:Name="labelOtherWorkers" Content="Other workers"/>
+            <ListBox x:Name="listOtherWorkers"  ItemsSource="{Binding Path=NonSelectedWorkers}" SelectedItem="{Binding Path=ReceiverForAdd}"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3">
+            <Label x:Name="labelReceivers" Content="Receivers" />
+            <ListBox x:Name="listReceivers" ItemsSource="{Binding Path=SelectedWorkers}" SelectedItem="{Binding Path=ReceiverForDelete}" Grid.RowSpan="3"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" Grid.Row="1">
+            <Button x:Name="btnAdd" Content="→" Command="{Binding Path=AddReceivers}" />
+            <Button x:Name="btnDelete" Content="←" Command="{Binding Path=DeleteReceivers}" />
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="2">
+            <Button x:Name="btnCreate" Content="Create" IsDefault="True" Click="createButton_Click"/>
+            <Button x:Name="btnCancel" Content="Cancel" IsCancel="True"/>
+        </StackPanel>
     </Grid>
 </Window>
