--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/InboxFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/InboxFolderControl.xaml
@@ -7,8 +7,9 @@
               xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="64" d:DesignWidth="232">
+
     <Grid>
-        <local:CreateFolderControl x:Name="createFolderControl" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <local:CreateFolderControl x:Name="createFolderControl" />
 
     </Grid>
 </UserControl>
