--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/SentFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/SentFolderControl.xaml
@@ -8,8 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="64" d:DesignWidth="232">
     <Grid>
-        <local:CreateFolderControl x:Name="createFolderControl" HorizontalAlignment="Left" VerticalAlignment="Top" >
-        </local:CreateFolderControl>
+        <local:CreateFolderControl x:Name="createFolderControl" />
 
     </Grid>
 </UserControl>
