--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeFolderWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeFolderWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="MakeFolderWindow" Height="206.302" Width="368.219" WindowStartupLocation="{StaticResource standartWindowStartupLocation}">
+        Title="MakeFolderWindow" Height="206.302" Width="368.219" WindowStartupLocation="{StaticResource standartWindowStartupLocation}" Style="{StaticResource standartNoResize}">
 
     <Window.Resources>
         <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
@@ -13,8 +13,8 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="129*"/>
-            <RowDefinition Height="46*"/>
+            <RowDefinition Height="18*"/>
+            <RowDefinition Height="7*"/>
         </Grid.RowDefinitions>
 
         <StackPanel x:Name="stackPanel" Grid.Row="0"/>
