--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/SentFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/SentFolderControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="64" d:DesignWidth="232">
     <Grid>
-        <local:CreateFolderControl x:Name="createFolderControl" />
+        <local:CreateFolderControl x:Name="createFolderControl" Style="{StaticResource standartControl}" />
 
     </Grid>
 </UserControl>
